fix(core): some ideas for menu max height. does not cooperate with submenus

--- a/apps/docs/src/app/documentation/core-helpers/toolbar/toolbar.component.scss
+++ b/apps/docs/src/app/documentation/core-helpers/toolbar/toolbar.component.scss
@@ -70,6 +70,8 @@
 }
 
 .fd-docs--i18n-menu-tooltip {
+    border-top-left-radius: var(--fdPopover_Border_Radius);
+    border-top-right-radius: var(--fdPopover_Border_Radius);
     padding: 0.5rem 0.75rem;
     position: relative;
     height: unset;
