--- a/apps/docs/src/app/documentation/core-helpers/toolbar/toolbar.component.html
+++ b/apps/docs/src/app/documentation/core-helpers/toolbar/toolbar.component.html
@@ -110,7 +110,7 @@
                 [fdMenuTrigger]="i18nMenu"
             ></button>
 
-            <fd-menu #i18nMenu [fillControlMode]="null" placement="bottom-end">
+            <fd-menu #i18nMenu [fillControlMode]="null" placement="bottom-end" [maxHeight]="400">
                 <ng-container *ngTemplateOutlet="i18nTemplate"></ng-container>
             </fd-menu>
 
