--- a/libs/docs/platform/table/child-docs/scrolling/table-scrolling-docs.component.html
+++ b/libs/docs/platform/table/child-docs/scrolling/table-scrolling-docs.component.html
@@ -20,29 +20,29 @@
 </component-example>
 <code-example [exampleFiles]="pageScrollingTableFiles"></code-example>
 
-<separator></separator>
+<!--<separator></separator>-->
 
-<fd-docs-section-title id="virtual-scroll" componentName="table"> Virtual Scroll</fd-docs-section-title>
-<p>
-    When dealing with large amounts of data, it is recommended to use virtual scrolling to improve performance. To
-    enable Virtual Scroll, use the following properties:
-</p>
+<!--<fd-docs-section-title id="virtual-scroll" componentName="table"> Virtual Scroll</fd-docs-section-title>-->
+<!--<p>-->
+<!--    When dealing with large amounts of data, it is recommended to use virtual scrolling to improve performance. To-->
+<!--    enable Virtual Scroll, use the following properties:-->
+<!--</p>-->
 
-<ul>
-    <li><code>[virtualScroll]="true"</code> - enables virtual scroll</li>
-    <li><code>[bodyHeight]="value"</code> - sets the height of the table body (viewport)</li>
-    <li>
-        <code>[rowHeight]="value"</code> - sets the height of the table row if it is different from default for the
-        current content density
-    </li>
-</ul>
+<!--<ul>-->
+<!--    <li><code>[virtualScroll]="true"</code> - enables virtual scroll</li>-->
+<!--    <li><code>[bodyHeight]="value"</code> - sets the height of the table body (viewport)</li>-->
+<!--    <li>-->
+<!--        <code>[rowHeight]="value"</code> - sets the height of the table row if it is different from default for the-->
+<!--        current content density-->
+<!--    </li>-->
+<!--</ul>-->
 
-<p>
-    Additionally, you may set the <code>renderAhead</code> input property to specify how many rows should be rendered
-    ahead of the current viewport. Default is 20.
-</p>
-<description> </description>
-<component-example>
-    <fdp-platform-table-virtual-scroll-example></fdp-platform-table-virtual-scroll-example>
-</component-example>
-<code-example [exampleFiles]="virtualScrollTableFiles"></code-example>
+<!--<p>-->
+<!--    Additionally, you may set the <code>renderAhead</code> input property to specify how many rows should be rendered-->
+<!--    ahead of the current viewport. Default is 20.-->
+<!--</p>-->
+<!--<description> </description>-->
+<!--<component-example>-->
+<!--    <fdp-platform-table-virtual-scroll-example></fdp-platform-table-virtual-scroll-example>-->
+<!--</component-example>-->
+<!--<code-example [exampleFiles]="virtualScrollTableFiles"></code-example>-->
