--- a/libs/docs/core/dialog/dialog-docs.component.html
+++ b/libs/docs/core/dialog/dialog-docs.component.html
@@ -203,6 +203,15 @@
 
 <separator></separator>
 
+<fd-docs-section-title id="Multi-com" componentName="dialog"> Swipe</fd-docs-section-title>
+<description> It is possible to use Dialog to create a swiping application. </description>
+<component-example>
+    <fd-dialog-swipe-example> </fd-dialog-swipe-example>
+</component-example>
+<code-example [exampleFiles]="swipeDialog"></code-example>
+
+<separator></separator>
+
 <fd-docs-section-title id="popover-inside-dialog" componentName="dialog">
     Dialog with inner popovers
 </fd-docs-section-title>
